Bug 708553 - Reset nsEventStateManager's hover state when we detach from nsPresContext. r=bz